--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -10,13 +6,14 @@
         <title>DevLink</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <form action="/" method="post">
         <div class="signup-block">
             <p>SIGN UP FOR OUR DAILY INSIDER</p>
-            <input type="text" placeholder="Enter your email">
-            <button type="button">Subscribe</button>
+            <input type="text" name="email" placeholder="Enter your email">
+            <button type="submit">Subscribe</button>
         </div>
         
         <script src="" async defer></script>
